frontend/tests/cases/positive/simple/float.gr
dub : Float [2] → Float
dub [x] = x + x

main : Float
main = dub [1.0]
