frontend/tests/cases/negative/unknownTyCon.gr
-- One is unknown
dub : Int [∞ : One] → Int
dub [x] = x + x
